--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.17.1",
-    "playwright": "^1.17.0"
+    "playwright": "^1.17.0",
+    "@faker-js/faker": "^7.3.0"
   }
 }
